--- a/src/content/docs/installation/vite.mdx
+++ b/src/content/docs/installation/vite.mdx
@@ -4,15 +4,71 @@ slug: "installation/vite"
 description: How to install SolidUI Neobrutalism theme for Vite
 ---
 
-import NpmCommand from "~/components/docs/npm-command.astro"
-
-## Create New Vite App
+### Create New Vite App
 
 Start by creating a new Vite Solid.js app using `create-vite`. Select **Solid.js** template when prompted.
 
-```sh
-npm create vite@latest
-```
 <NpmCommand type="create" command="vite@latest" />
 
-<NpmCommand type="install" command="@kobalte/core" />
+### Add Tailwind CSS to your project
+
+<NpmCommand type="install" command="tailwindcss @tailwindcss/vite" />
+
+Replace everything in `src/index.css` with the following:
+
+```css
+/* src/index.css */
+@import "tailwindcss";
+```
+
+### Edit `tsconfig.json` file
+
+The current version of vite splits TypeScript configuration into three files, two of which need to be edited. Add the `baseUrl` and `paths` properties to the `compilerOptions` section of the `tsconfig.json` and `tsconfig.app.json` files:
+
+```json
+// tsconfig.json
+{
+    ...
+    "compilerOptions": {
+        baseUrl: ".",
+        paths: {
+            "~/*": ["./src/*"]
+        }
+    }
+}
+```
+
+Then edit `tsconfig.app.json` file to extend the base configuration:
+
+```json
+// tsconfig.app.json
+{
+    ...
+    "compilerOptions": {
+        ...
+        baseUrl: ".",
+        paths: {
+            "~/*": ["./src/*"]
+        }
+    }
+}
+```
+
+### Edit `vite.config.ts` file
+
+```ts
+// vite.config.ts
+import path from "path";
+import { defineConfig } from "vite";
+import solid from "vite-plugin-solid";
+import tailwindcss from "@tailwindcss/vite";
+
+export default defineConfig({
+    plugins: [solid(), tailwindcss()],
+    resolve: {
+        alias: {
+            "~": path.resolve(__dirname, "./src"),
+        },
+    },
+});
+```
