--- a/src/content/docs/components/accordion.mdx
+++ b/src/content/docs/components/accordion.mdx
@@ -1,5 +1,5 @@
 ---
-title: Installation
-slug: installation/accordion
+title: Accordion
+slug: "components/accordion"
 description: A vertically stacked set of interactive headings that each reveal a section of content.
 ---
