--- a/src/content/docs/introduction.mdx
+++ b/src/content/docs/introduction.mdx
@@ -1,9 +1,28 @@
 ---
 title: Introduction
-slug: ""
+slug: "introduction"
 description: Neobrutalism Theme for solid-ui
+next: installation
 ---
 
 Neobrutalism is a design style that is characterized by its bold, high-contrast colors, raw textures, and a focus on functionality over aesthetics. It often features a mix of industrial materials, such as concrete and metal, with bright, vibrant colors.
 
 This project is a port of [shadcn/ui Neobrutalism Components](https://www.neobrutalism.dev/docs) for [SolidUI](https://www.solid-ui.com/), which is an unofficial port of [shadcn/ui](https://ui.shadcn.com/) to [Solid.js](https://www.solidjs.com/).
+
+- 1
+- 2
+- 3
+
+1. 1
+2. 2
+3. 3
+
+> Neobrutalism is a design style that is characterized by its bold, high-contrast colors, raw textures, and a focus on functionality over aesthetics. It often features a mix of industrial materials, such as concrete and metal, with bright, vibrant colors.
+
+---
+
+hello
+
+```ts
+const a = "1";
+```
