Add dark mode and installation docs

--- a/src/content/docs/components/button.mdx
+++ b/src/content/docs/components/button.mdx
@@ -1,15 +1,15 @@
 ---
-title: Badge
-slug: components/badge
-description: A component that displays a small count or label.
+title: Button
+slug: components/button
+description: A component that displays a button.
 prev: components/breadcrumb
 prevLabel: Breadcrumb
 next: components/calendar
 nextLabel: Calendar
 ---
 
-import BadgeCode from "/src/registry/items/components/badge.tsx?raw"
+import ButtonCode from "/src/registry/items/components/button.tsx?raw"
 
 <CollapsibleCode>
-    <CodeComponent code={BadgeCode} lang="tsx" title="~/components/ui/badge.tsx" />
+    <CodeComponent code={ButtonCode} lang="tsx" title="~/components/ui/button.tsx" />
 </CollapsibleCode>
