--- a/src/content/docs/installation/solid-start.mdx
+++ b/src/content/docs/installation/solid-start.mdx
@@ -1,7 +1,7 @@
 ---
-title: Solid Start Installation
-slug: "installation/solid-start"
-description: How to install SolidUI Neobrutalism theme for Solid Start
+title: Solid Start
+slug: installation/solid-start
+description: How to install SolidUI Neobrutalism theme for Solid Start app
 prev: installation/vite
 prevLabel: Vite
 next: installation/astro
@@ -34,11 +34,11 @@ cd {project-name}
 
 <NpmCommand type="install" command="" />
 
-### Add dependencies
+### Add Dependencies
 
 <NpmCommand type="install" command="class-variance-authority clsx tailwind-merge lucide-solid tw-animate-css @kobalte/tailwindcss" />
 
-### Configure styles
+### Configure Styles
 
 <CollapsibleCode>
 
@@ -175,7 +175,7 @@ cd {project-name}
 
 </CollapsibleCode>
 
-### Add `cn` helper function
+### Add `cn` Helper Function
 
 ```ts
 // src/lib/utils.ts
