--- a/src/content/docs/installation.mdx
+++ b/src/content/docs/installation.mdx
@@ -4,8 +4,8 @@ slug: installation
 description: How to install SolidUI Neobrutalism theme dependencies
 prev: introduction
 prevLabel: Introduction
-next: theming
-nextLabel: Theming
+next: components-json
+nextLabel: components.json
 ---
 
 import tanstackLogo from "~/assets/tanstack.png";
