--- a/src/content/docs/installation/solid-start.mdx
+++ b/src/content/docs/installation/solid-start.mdx
@@ -53,7 +53,7 @@ cd {project-name}
 :root {
   --background: oklch(0.93 0.03 256);
   --foreground: oklch(0.28 0.09 268);
-  --primary: oklch(0.62 0.19 260);
+  --primary: oklch(0.72 0.19 260);
   --primary-foreground: oklch(0.28 0.09 268);
   --secondary-background: oklch(100% 0 0);
   --border: oklch(0.28 0.09 268);
@@ -79,8 +79,6 @@ cd {project-name}
 
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-
-  --header-height: calc(var(--spacing) * 14);
 }
 
 .dark {
@@ -89,7 +87,7 @@ cd {project-name}
   --primary: oklch(0.62 0.19 260);
   --primary-foreground: oklch(0.28 0.09 268);
   --secondary-background: oklch(0.28 0.09 268);
-  --border: oklch(0.38 0.14 266);
+  --border: oklch(0.97 0.01 255);
   --ring: oklch(0.97 0.01 255);
   --overlay: oklch(0.28 0.09 268 / 0.8);
   --shadow: 4px 4px 0px 0px var(--border);
@@ -147,8 +145,6 @@ cd {project-name}
   --radius-base: 5px;
   --shadow-shadow: var(--shadow);
   --shadow-destructive: var(--shadow-destructive);
-  --font-weight-base: 500;
-  --font-weight-heading: 700;
 
   --animate-caret-blink: caret-blink 1s infinite;
 
@@ -168,7 +164,7 @@ cd {project-name}
 
 @layer base {
   body {
-    @apply bg-background font-base text-foreground;
+    @apply bg-background text-foreground;
   }
 }
 ```
@@ -186,6 +182,30 @@ export function cn(...inputs: ClassValue[]) {
   return twMerge(clsx(inputs))
 }
 ```
+
+### Create A `components.json` File
+
+```json
+// components.json
+{
+  "$schema": "https://ui.shadcn.com/schema.json",
+  "tailwind": {
+    "css": "src/app.css",
+    "config": "",
+    "baseColor": "slate",
+    "cssVariables": true
+  },
+  "aliases": {
+    "utils": "~/lib/utils",
+    "components": "~/components"
+  },
+  "style": "default",
+  "rsc": false,
+  "tsx": true
+}
+```
+
+Change the Tailwind CSS file path and aliases according to your project structure.
 
 ### That's it!
 
