--- a/src/content/docs/theming.mdx
+++ b/src/content/docs/theming.mdx
@@ -2,8 +2,8 @@
 title: Theming
 slug: theming
 description: How to customize the theme of SolidUI Neobrutalism
-prev: installation
-prevLabel: Installation
+prev: components-json
+prevLabel: components.json
 next: dark-mode
 nextLabel: Dark Mode
 ---
